# QUANT_PROJECT

./: .env.example  .gitignore  DATABASE_GUIDE.md  Dockerfile  LICENSE  README.md  STRATEGY_V2_DESIGN.md  alembic.ini  docker-compose.yml  instructions_for_claude_code.md  pyproject.toml  requirements.txt
.claude/TODO/: BUGS.md  CODE_QUALITY.md  CONCURRENCY.md  DONE.md  FEATURE_MARKET_CALENDAR.md  FEATURE_STRATEGY_MODE.md  FEATURE_TX_COST.md  FEATURE_VOL_TARGET.md  FINAL_AUDIT.md  FINAL_AUDIT_R2.md  FINAL_AUDIT_R3.md  FINAL_AUDIT_R4.md  FINAL_AUDIT_R5.md  FINAL_AUDIT_R6.md  PERFORMANCE.md  PLAN.md  SECURITY.md
alembic/: env.py
backtest/: engine.py
config/: default.yaml  dev.yaml  prod.yaml
data/: alpaca_feed.py  base_feed.py  binance_feed.py  binance_sim_feed.py  collector.py  custom_data.py  manager.py  normalizer.py  yfinance_feed.py
db/: init.sql  models.py  session.py
execution/: alpaca_adapter.py  base_adapter.py  binance_adapter.py  order.py  router.py  sim_adapter.py
monitoring/: app.py  auth.py  backtest.py  dashboard.py  editor.py  logger.py  logs.py  rate_limit.py  sessions.py  settings.py  telegram_bot.py
portfolio/: pnl.py  reconciler.py  tracker.py
risk/: kill_switch.py  limits.py  manager.py
scripts/: run_all.py  run_data.py  run_execution.py  run_monitor.py  run_strategy.py
session/: manager.py  schemas.py
shared/: config.py  enums.py  market_calendar.py  redis_client.py  schemas.py
strategy/: base.py  custom_validator.py  engine.py  executor.py  rebalancer.py  validator.py  validator_v2.py
tests/: conftest.py
(+38 files in other folders)
